# QQRobot-Plugin-Dev

./: .gitmodules  CMakeLists.txt  conanfile.txt
protos/: cqhttp_api.proto
src/: Bot.cpp  Bot.h  Plugin.cpp  Plugin.h  logger.cpp  logger.h
src/protos/: cqhttp_api.pb.cc  cqhttp_api.pb.h  cqhttp_base.pb.h  cqhttp_event.pb.cc  cqhttp_event.pb.h
